[FIX] Sidebar text overflow when closed and white background

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
   cursor: default;
+  background: #1e222d;
 }
 
 code {
@@ -152,6 +153,7 @@ code {
   color: #fff;
   font-size: 15px;
   padding: 5px 5px;
+  /* white-space: nowrap; */
   opacity: 0.6;
   transition: all 0.3s ease;
 }
@@ -161,6 +163,7 @@ code {
 .sidebar.close .nav-links li .sub-menu {
   position: absolute;
   left: 100%;
+  white-space: nowrap;
   top: -10px;
   margin-top: 0;
   padding: 10px 20px;
@@ -246,7 +249,6 @@ code {
 .home-section {
   position: relative;
   background: #1e222d;
-  /* height: 100vh; */
   left: 340px;
   width: calc(100% - 260px);
   transition: all 0.5s ease;
@@ -257,7 +259,6 @@ code {
   width: calc(100% - 78px);
 }
 .home-content {
-  /* border-width: 5px; */
   display: flex;
   align-items: center;
   justify-content: center;
